# sdstatus

./: .gitignore  Cargo.toml  Gopkg.toml  Makefile  README.md  go.mod  go.sum  main.go  sddir.go  sdonion.txt
.circleci/: config.yml
.github/workflows/: ci.yml
src/: main.rs
