[package]
name = "sdstatus"
version = "0.1.0"
authors = ["Conor Schaefer <conor@freedom.press>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
custom_error = "1.9"
env_logger = "0.8"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
