[package]
name = "sdstatus"
version = "0.1.0"
authors = ["Conor Schaefer <conor@freedom.press>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arti-hyper = "0.9.1"
arti-client = {version = "0.9.1", features = ["onion-service-client"]}
clap = {version = "4.3.8", features = ["derive"]}
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
tokio = { version = "1.28.2", features = ["full"] }
tor-rtcompat = "0.9.1"
